<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launcher</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sws@todo.todo">sws</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>roscco_msgs</build_depend>
  <build_depend>adma_ros_driver_msgs</build_depend>
  <build_depend>autoware_auto_vehicle_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>roscco_msgs</exec_depend>
  <exec_depend>adma_ros_driver_msgs</exec_depend>
  <exec_depend>autoware_auto_vehicle_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
